# hipe-ocrepair-llm

./: .gitignore  LICENSE  README.md  findings.md  hipe_aggregated_dev.parquet  main.py  notebook.ipynb  pyproject.toml
data/: hipe_aggregated_dev.parquet  hipe_aggregated_test.parquet
finetune/: bart.py  config.yaml  hipe_aggregated_dev.parquet  qwen3.py
finetune-logs/: bart-399085.err  bart-399085.out  bart-399088.err  bart-399088.out  bart-399091.err  bart-399091.out  job-399003.err  job-399003.out  job-399062.err  job-399062.out
model_eval/: evaluate_bart.py  evaluate_pleias.py  evaluate_qwen.py  metrics.py  split_metrics.py
model_eval_logs/: _mbart-large-50-ocr-dta19-metadata_dta19_test_meta_results.parquet  _mbart-large-50-ocr-english-metadata_english_test_meta_results.parquet  _mbart-large-50-ocr-french-metadata_french_test_meta_results.parquet  _mbart-large-50-ocr-german-metadata_german_test_meta_results.parquet  _mbart-large-50-ocr-hipe_aggregated-metadata_hipe_aggregated_test_meta_results.parquet  _mbart-large-50-ocr-icdar2017-metadata_icdar2017_test_meta_results.parquet  _mbart-large-50-ocr-impresso-nzz-metadata_impresso-nzz_test_meta_results.parquet  _mbart-large-50-ocr-impresso-snippets-metadata_impresso-snippets_test_meta_results.parquet  _mbart-large-50-ocr-overproof-combined-metadata_overproof-combined_test_meta_results.parquet  bart-base-ocr-dta19-metadata_dta19_test_meta_results.parquet  bart-base-ocr-english-metadata_english_test_meta_results.parquet  bart-base-ocr-french-metadata_french_test_meta_results.parquet  (+150 more)
report/: main.tex  (+1 more)
(+64 files in other folders)
