[project]
name = "hipe-ocrepair-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "peft>=0.18.1",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "trl>=1.0.0",
]
