[project]
name = "hipe-ocrepair-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "jiwer>=4.0.0",
    "pandas>=3.0.2",
    "peft>=0.18.1",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.5.0",
    "trl>=1.0.0",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [ { index = "pytorch-cu124" } ]
torchvision = [ { index = "pytorch-cu124" } ]
torchaudio = [ { index = "pytorch-cu124" } ]
